# jangdokdae

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
jangdokdae-server/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-airflow.txt
jangdokdae-server/app/: config.py  main.py
jangdokdae-server/config/: news_body.yaml  news_feeds.yaml  news_filter.yaml
jangdokdae-server/dags/: assets.py  jangdokdae_clustering.py  jangdokdae_macro.py  jangdokdae_pipeline.py  jangdokdae_quarterly.py
jangdokdae-server/docs/: work-summary-issue-docent-tagging.md
jangdokdae-server/evaluation/: blob_check.py  calibrate.py  chunk_sweep.py  clusterers.py  embeddings.py  gate2.py  goldset.py  metrics.py  param_sweep.py  run.py  significance.py
jangdokdae-server/migrations/: README.md  env.py
jangdokdae-server/prompts/: frame_head_specs.yaml  news_classify.yaml  news_explanation.yaml  news_generate.yaml
jangdokdae-server/scripts/: backfill_dictionary_terms.py  backfill_disclosures.py  backfill_issue_docent_tags.py  backfill_market_indicators.py  backfill_quizzes.py  build_goldset.py  compare_classify_improvement.py  compare_summary_first.py  export_dictionary_definition_gold.py  export_dictionary_segmentation_gold.py  generate_dictionary_term_candidates.py  import_bok_dictionary.py  label_goldset.py  propose_dictionary_term_units.py  reclassify_unknown_markets.py  relabel_issue_docent_heads.py  remediate_issue_docent.py  review_dictionary_term_candidates.py  review_dictionary_term_units.py  run_analysis.py  sync_company_master.py  sync_overseas_companies.py  verify_frame_coverage.py
jangdokdae-server/tests/: test_api_routers.py  test_article_fetcher.py  test_auth_callback.py  test_backfill_quizzes.py  test_body_processor.py  test_bok_dictionary.py  test_classifier.py  test_company_collector.py  test_company_master.py  test_config_loader.py  test_content_generator.py  test_dictionary_api.py  test_dictionary_definition_eval.py  test_dictionary_eval.py  test_dictionary_segmentation.py  test_embedder.py  test_enricher.py  test_eval_metrics.py  test_export_dictionary_segmentation_gold.py  test_financial_collector.py  test_frames.py  test_generate_dictionary_term_candidates.py  test_issue_api.py  test_queries.py  (+16 more)
(+243 files in other folders)
