[project]
name = "jangdokdae"
version = "0.1.0"
description = "주린이를 위한 주식 뉴스 큐레이션 & 학습 서비스"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "email-validator==2.3.0",
    "httpx==0.28.1",
    "langchain-google-vertexai==3.2.3",
    "langgraph==1.2.4",
    "pyyaml==6.0.3",
    "python-multipart==0.0.32",
    "pgvector==0.4.2",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "greenlet==3.5.1",
]

# API 서버(Render)에는 불필요한 배치 파이프라인 전용 의존성.
# GitHub Actions 파이프라인은 `uv sync --frozen --group pipeline`으로 설치한다.
[dependency-groups]
pipeline = [
    "feedparser==6.0.12",
    "python-dateutil==2.9.0.post0",
    "pypdf==6.14.2",
    "finance-datareader==0.9.202",
    "pykrx>=1.2.8",
    "trafilatura>=2.1.0",
    "hdbscan>=0.8.44",
    "scikit-learn>=1.9.0",
    "langchain==1.3.4",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
    "langchain-google-genai>=4.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "black==26.5.1",
    "ruff==0.15.16",
    "mypy==2.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "services", "utils"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]  # 자동 생성 마이그레이션·env.py는 린트 제외

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# 동명 모듈(app/db/models.py vs app/api/models.py)을 경로 기반으로 구분 — __init__.py 없이 PEP 420 유지
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["feedparser", "pgvector.*", "dateutil.*", "FinanceDataReader", "pykrx.*", "hdbscan", "sklearn.*", "yaml", "lxml.*", "jose.*"]
ignore_missing_imports = true
